<resources>
    <string name="app_name">Take Your Pill</string>
    <string name="edit_text_hint_name">Nombre</string>
    <string name="edit_text_hint_description">Descripción</string>
    <string name="edit_text_hint_time">Hora</string>
    <string name="text_add_image">AÑADIR IMAGEN</string>
    <string name="btn_text_save">GUARDAR</string>
    <string name="edit_text_hint_surname1">Primer apellido</string>
    <string name="edit_text_hint_surname2">Segundo apellido</string>
    <string name="edit_text_hint_birthday">Fecha nacimiento</string>
    <string name="note_text_no_pill_found">No se encontraron medicamentos. Añada uno, por favor.</string>
    <string name="note_text_no_time_found">No se encontraron horarios. Añada uno, por favor.</string>
    <string name="image_content_description">Imagen</string>
    <string name="edit_text_hint_nick">Usuario</string>
    <string name="edit_text_hint_password">Contraseña</string>
    <string name="btn_password_change">Cambiar contraseña</string>
    <string name="edit_text_hint_doses">Dosis</string>
    <string name="edit_text_check_times">Ver horas</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="text_view_registro">Regístrese o acceda con sus datos</string>
    <string name="login">LOGIN</string>
    <string name="text_view_registro_aqui">Regístrese aquí</string>
    <string name="alert_dialog_choose">Elija una acción</string>
    <string name="alert_dialog_choose_picture">Elegir una imagen de la galería</string>
    <string name="alert_dialog_choose_camera">Elegir una foto de la cámara</string>
    <string name="error_no_name">Por favor introduzca un nombre</string>
    <string name="error_no_description">Por favor introduzca una descripción</string>
    <string name="error_no_dose">Por favor introduzca una dosis</string>
    <string name="error_no_image">Por favor añada una imagen</string>
    <string name="success_pill">Añadida medicación correctamente</string>
    <string name="succes_update_pill">Actualizada medicación correctamente</string>
    <string name="error_add_image">Ha habido un error</string>
    <string name="request_permission">No diste permiso para acceder a tus imágenes, puedes cambiarlo en ajustes de usuario del sistema</string>
    <string name="go_settings">Ve a los ajustes</string>
    <string name="button_cancel">Cancelar</string>
    <string name="succes_time">Añadido horario correctamente</string>
    <string name="succes_update_time">Actualizado horario correctamente</string>
    <string name="request_login_user">Por favor introduzca un usuario</string>
    <string name="request_login_password">Por favor introduzca una contraseña</string>
    <string name="wrong_login_user_password">Usuario o contraseña incorrecto</string>
    <string name="alert_dialog_delete">ELIMINAR ENTRADA</string>
    <string name="alert_dialog_confirm_delete">¿Quiere eliminar la siguiente entrada de su lista?</string>
    <string name="alert_dialog_denied_delete">No eliminó la entrada</string>
    <string name="alert_dialog_delete_confirmed">Entrada eliminada</string>
    <string name="alert_dialog_no">NO</string>
    <string name="alert_dialog_yes">SÍ</string>
    <string name="tb_time">HORA</string>
    <string name="btn_update">ACTUALIZAR</string>
    <string name="tb_edit_time">Editar HORA</string>
    <string name="user_request">Por favor introduzca un usuario</string>
    <string name="password_request">Por favor introduzca una contraseña</string>
    <string name="name_request">Por favor introduzca un nombre</string>
    <string name="surname1_request">Por favor introduzca un primer apellido</string>
    <string name="surname2_request">Por favor introduzca un segundo apellido</string>
    <string name="same_user_exists_alert">Ya existe un usuario con el mismo nombre, introduzca otro, porfavor</string>
    <string name="register_success">Registrado correctamente, puede logarse</string>
    <string name="user_update_success">Datos actualizados correctamente</string>
    <string name="password_request_confirm">Introduzca una confirmación para la contraseña</string>
    <string name="password_updated_success">Password actualizado correctamente</string>
    <string name="wrong_same_password">No introdujo el mismo password en ambos campos</string>
</resources>